<resources>
    <string name="app_name">Earl</string>
    <string name="MODEL_FILE">models/model.lite</string>
    <string name="FEATURES_CONFIG">models/features.json</string>
    <string name="package_monitor_process">com.earl.package_monitor</string>
    <string name="full_scan">Refresh</string>
    <string name="application_icon">Application Icon</string>
    <string name="settings_file">settings</string>
    <string name="app_settings">Settings</string>
    <string name="scan_cache_file">scan_cache</string>
    <string name="settings_show_system_apps">SHOW_SYSTEM_APPS</string>
    <string name="settings_use_scan_cache">USE_SCAN_CACHE</string>
    <string name="settings_use_verdicts_db">USE_VERDICTS_DB</string>
    <string name="settings_hook_on_install">HOOK_ON_INSTALL</string>
    <string name="description_show_system_apps">Show system apps (may result in false positives)</string>
    <string name="description_use_scan_cache">Use cached results for better performance</string>
    <string name="description_use_verdicts_db">Get blacklisted and whitelisted apps from the database</string>
    <string name="description_hook_on_install">Automatically scan newly installed applications</string>
    <string name="pkg_monitor_channel">CHN_PKG_MONITOR</string>
    <string name="settings_title">Settings</string>
    <string name="main_title">Scan status</string>
    <string name="apk_title">App status</string>
    <string name="pkg_key">PKG_NAME</string>
    <string name="risk_level_key">RISK</string>
    <string name="verdict_color_key">VERDICT_COLOR</string>
    <string name="description_text_view_apk_md5">MD5</string>
    <string name="description_text_view_risk">Application risk level</string>
    <string name="description_text_view_pkg_name">Package name</string>
    <string name="description_text_view_app_name">Application name</string>
    <string name="open_a_ticket">Open a ticket</string>
    <string name="description_button_create_ticket">Create ticket</string>
    <string name="uninstall">Uninstall</string>
    <string name="description_button_uninstall">Uninstall the app</string>
    <string name="describe_email">Please leave your email address, just in case some further APK investigations are needed</string>
    <string name="submit">Submit</string>
    <string name="description_email_address">Email address (optional)</string>
    <string name="ticket_reason">Please briefly provide the reason for opening this ticket</string>
    <string name="ticket_reason_accessibility">The reason for opening a ticket (optional)</string>
    <string name="md5_key">APK_MD5</string>
</resources>
